// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Adding team users able to add team members 1`] = `
Object {
  "data": Object {
    "addTeamUser": Object {
      "users": Array [
        Object {
          "email": "john1@doe.com",
          "name": "John 1",
          "tz": "America/Los_Angeles",
        },
        Object {
          "email": "darth@vader.com",
          "name": "New member",
          "tz": "America/Los_Angeles",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Fetching team is able to fetch own team 1`] = `
Object {
  "data": Object {
    "team": Object {
      "id": Any<String>,
      "name": "Cool team",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Listing team users able to get only own team users 1`] = `
Object {
  "data": Object {
    "team": Object {
      "name": "Cool team",
      "users": Array [
        Object {
          "email": Any<String>,
        },
        Object {
          "email": Any<String>,
        },
        Object {
          "email": Any<String>,
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Removing team users able to remove team members 1`] = `
Object {
  "data": Object {
    "removeTeamUser": Object {
      "name": "Cool team",
      "users": Array [
        Object {
          "email": "john1@doe.com",
          "name": "John 1",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Updating team is able to update own team 1`] = `
Object {
  "data": Object {
    "updateTeam": Object {
      "id": Any<String>,
      "name": "Updated team",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
